--- a/src/styles/actual-event.scss
+++ b/src/styles/actual-event.scss
@@ -6,7 +6,7 @@
     font-weight: 700;
     font-size: 48px;
     line-height: 100%;
-    margin: 318px 0 60px;
+    margin: 200px 0 60px;
   }
 
   &__wrapper {
@@ -23,7 +23,17 @@
   &__img {
     width: 870px;
     height: 520px;
-    object-fit: cover;
+    transition: height 1s;
+  }
+
+  &__img--one {
+    background: url("../images/Photo_1.jpg") no-repeat center;
+    background-size: cover;
+  }
+
+  &__img--two {
+    background: url("../images/Photo_2.jpg") no-repeat center;
+    background-size: cover;
   }
 
   &__info {
@@ -32,6 +42,7 @@
     align-self: center;
     width: 370px;
   }
+
   &__subtitle {
     font-family: $IBM-font-family;
     font-weight: 500;
@@ -73,5 +84,90 @@
     font-size: 16px;
     line-height: 150%;
     color: #4e4e4e;
+  }
+
+  @media (max-width: 1500px) {
+    &__img {
+      width: 670px;
+    }
+  }
+
+  @media (max-width: 1280px) {
+    &__title {
+      font-size: 36px;
+      margin: 90px 0 50px;
+    }
+
+    &__wrapper {
+      flex-direction: column;
+      gap: 30px;
+      margin-bottom: 50px;
+    }
+
+    &__wrapper--second {
+      flex-direction: column-reverse;
+    }
+
+    &__info {
+      align-self: flex-start;
+    }
+
+    &__subtitle {
+      margin-bottom: 30px;
+    }
+
+    &__img {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 700px) {
+    &__title {
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      align-self: center;
+      width: 197px;
+    }
+
+    &__img {
+      width: 100%;
+      height: 210px;
+    }
+
+    &__info {
+      width: 280px;
+    }
+
+    &__name {
+      font-size: 28px;
+
+      &::after {
+        width: 10px;
+        height: 10px;
+      }
+    }
+    &__subtitle {
+      width: 280px;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+  }
+
+  @media (max-width: 320px) {
+    &__title {
+      font-size: 36px;
+      margin: 70px 0 40px;
+    }
+
+    &__wrapper {
+      gap: 15px;
+      margin-bottom: 60px;
+    }
+
+    &__subtitle {
+      margin-bottom: 10px;
+    }
   }
 }
