--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,10 @@
 .header {
   display: flex;
   justify-content: center;
+  height: 102px;
+  min-width: calc(320px - 40px);
+
+  @media (max-width: 320px) {
+    height: 91px;
+  }
 }
