--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,20 +1,19 @@
 .menu {
   flex-direction: row;
-  // justify-content: space-between;
   flex-grow: 1;
   gap: 30px;
 
   &__list {
     display: flex;
-    gap: 10px;
-    // justify-content: space-between;
+    width: 100%;
+    justify-content: space-around;
     list-style: none;
-    // flex-basis: 80%;
   }
 
   &__item {
     padding: 10px 14px;
     border-radius: 10px;
+    z-index: 1;
     transition: background-color $duration;
 
     &:hover {
@@ -38,21 +37,26 @@
     width: 18px;
     height: 18px;
     object-fit: contain;
-    // flex-basis: 20%;
     cursor: pointer;
   }
 
-  // @media (max-width: 1125px) {
-  //   flex-direction: column;
-  //   align-items: center;
+  @media (max-width: 900px) {
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    height: 402px;
+    width: 100%;
+    background-color: #285a4c;
 
-  //   &__list {
-  //     flex-direction: column;
-  //     align-items: center;
-  //   }
+    &__list {
+      margin: auto;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
 
-  //   &__search-logo {
-  //     margin-left: 60px;
-  //   }
-  // }
+    &__search-logo {
+      display: none;
+    }
+  }
 }
