--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -40,10 +40,75 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 100%;
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: lightgray;
+      cursor: pointer;
+    }
   }
 
   &__button {
+    border: none;
     width: 70px;
     background-color: #f14a27;
+    cursor: pointer;
+
+    &:hover {
+      transition: transform 300ms;
+      transform: scale(1.05);
+    }
+
+    &:active {
+      background-color: #847b74;
+    }
+  }
+
+  @media (max-width: 1280px) {
+    &__wrapper {
+      margin-top: 64px;
+    }
+
+    &__form {
+      width: 475px;
+      height: 70px;
+    }
+
+    &__input {
+      width: 395px;
+    }
+  }
+
+  @media (max-width: 1000px) {
+    &__wrapper {
+      margin-top: 55px;
+    }
+
+    &__title {
+      font-size: 36px;
+    }
+
+    &__text {
+      width: 280px;
+      text-align: center;
+      line-height: 150%;
+      margin-top: 30px;
+      margin-bottom: 48px;
+    }
+
+    &__form {
+      width: 283px;
+      height: 50px;
+    }
+
+    &__input {
+      padding: 18px 35px;
+      width: 233px;
+    }
+
+    &__button {
+      width: 50px;
+    }
   }
 }
