--- a/src/styles/classicism.scss
+++ b/src/styles/classicism.scss
@@ -1,9 +1,9 @@
 .classicism {
-  position: relative;
-  top: -102px;
   justify-content: center;
 
   &__info {
+    position: relative;
+    top: calc(674px - 102px);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -14,8 +14,10 @@
   }
 
   &__subtitle {
+    width: calc(100% - 200px);
     margin-top: 45px;
     margin-bottom: 16px;
+    text-transform: uppercase;
     font-family: $IBM-font-family;
     font-weight: 500;
     font-size: 14px;
@@ -37,5 +39,40 @@
     font-size: 36px;
     line-height: 100%;
     color: #0f0e08;
+  }
+
+  @media (max-width: 1280px) {
+    &__info {
+      top: calc(394px - 102px);
+      width: 570px;
+      height: 204px;
+    }
+  }
+
+  @media (max-width: 700px) {
+    &__info {
+      top: calc(394px - 77px);
+      width: 278px;
+      height: 154px;
+    }
+
+    &__subtitle {
+      width: calc(100% - 40px);
+      margin-top: 25px;
+      margin-bottom: 16px;
+      font-size: 16px;
+    }
+
+    &__date {
+      margin-left: 14px;
+      font-size: 16px;
+      line-height: 150%;
+    }
+
+    &__name {
+      width: 236px;
+      margin-bottom: 34px;
+      font-size: 28px;
+    }
   }
 }
