--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,10 +11,13 @@
     justify-content: start;
     flex-wrap: wrap;
     max-width: $max-width-for-viewport-more-than-1920px;
-    width: calc(100% - 40px);
+    width: calc(100% - 110px);
+    min-width: calc(320px - 40px);
   }
 
   &__classicism-background {
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 674px;
     background: url("../images/Photo_3.jpg") no-repeat center;
@@ -28,5 +31,31 @@
     height: 650px;
     background: url("../images/Photo_4.jpg") no-repeat center;
     background-size: cover;
+  }
+
+  @media (max-width: 1280px) {
+    &__section {
+      width: calc(100% - 40px);
+    }
+
+    &__classicism-background {
+      width: calc(100% - 40px);
+      height: 390px;
+    }
+
+    &__subscription-background {
+      width: calc(100% - 40px);
+      height: 390px;
+    }
+  }
+
+  @media (max-width: 320px) {
+    &__classicism-background {
+      width: 100%;
+    }
+
+    &__subscription-background {
+      width: 100%;
+    }
   }
 }
