--- a/src/styles/timetable.scss
+++ b/src/styles/timetable.scss
@@ -5,11 +5,19 @@
 
   &__title {
     font-weight: 400;
+    font-size: 14px;
+    line-height: 140.62%;
     margin-bottom: 20px;
   }
 
   &__schedule {
     margin-bottom: 20px;
+  }
+
+  &__style {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 150%;
   }
 
   &__text {
