--- a/src/styles/block/exhibition.scss
+++ b/src/styles/block/exhibition.scss
@@ -5,9 +5,10 @@
 
   &__name {
     font-family: $IBMPlexSansFontFamili;
-    font-weight: 300;
     font-size: 14px;
+    font-weight: 500;
     line-height: 1em;
+    color: $colorDarkGray;
     text-transform: uppercase;
     margin-right: 26px;
   }
