--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -19,6 +19,7 @@
 
     @media screen and(max-width: $beakpointTele) {
       flex-direction: column;
+      justify-content: space-around;
     }
   }
 
