--- a/src/styles/block/form.scss
+++ b/src/styles/block/form.scss
@@ -25,6 +25,7 @@
     background-image: url("../images/VectorBlack.png");
     background-repeat: no-repeat;
     background-position: center;
+    border: none;
 
     @media screen and(max-width: $beakpointTele) {
       width: 50px;
@@ -32,5 +33,9 @@
       margin-left: 0;
       transform: translateX(-10%);
     }
+  }
+
+  &__button:hover {
+    background-color: $colorDarkGray;
   }
 }
