--- a/src/styles/block/general-info.scss
+++ b/src/styles/block/general-info.scss
@@ -6,6 +6,10 @@
   margin-bottom: 85px;
   align-items: flex-start;
 
+  @media screen and(max-width: $beakpointIPood) {
+    justify-content: space-around;
+  }
+
   @media screen and(max-width: $beakpointTele) {
     width: 100%;
     display: grid;
