--- a/src/styles/block/header-nav.scss
+++ b/src/styles/block/header-nav.scss
@@ -11,6 +11,7 @@
 
   &__list {
     display: flex;
+    justify-content: space-between;
 
     @media screen and(max-width: $beakpointIPood) {
       flex-direction: column;
@@ -45,6 +46,7 @@
     line-height: 1em;
     padding: 10px 15px;
     transition: background-color $durarion;
+    text-align: left;
 
     &:hover {
       background-color: $colorDarkGray;
@@ -53,8 +55,8 @@
 
     @media screen and(max-width: $beakpointIPood) {
       font-size: 26px;
+      padding: 10px 2px;
     }
-
   }
 
   &__logo {
@@ -74,5 +76,5 @@
 
 .header-nav--active {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
