--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -77,9 +77,14 @@
     transform: rotate(-90deg);
     color: $colorDarkGray;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1em;
     font-family: $IBMPlexSans-BoldFontFamili;
+    transition: transform $durarion;
+
+    &:hover {
+      transform: scale(1.2) rotate(-130deg);
+    }
 
     @media screen and(max-width: $beakpointIPood) {
       display: none;
@@ -93,7 +98,6 @@
       width: 70px;
       height: 1px;
       background-color: $colorDarkGreen;
-
     }
   }
 
@@ -153,17 +157,27 @@
     border: 1px solid $colorDarkGreen;
     text-transform: uppercase;
 
+    &:hover {
+      border-color: $colorDarkGray;
+      color: $colorDarkGray;
+    }
+
     &::after {
       content: "";
       display: inline-block;
       width: 70px;
-      height: 60px;
+      height: 59px;
       transform: translate(31px, 24px);
       color: $colorWhite;
       background-color: $colorDarkGreen;
       background-image: url("../images/Vector.png");
       background-position: center;
       background-repeat: no-repeat;
+    }
+
+    &:hover:after {
+      border-color: $colorDarkGray;
+      background-color: $colorDarkGray;
     }
   }
 
