--- a/src/styles/block/footer-nav.scss
+++ b/src/styles/block/footer-nav.scss
@@ -14,12 +14,23 @@
     grid-template-rows: repeat(4, auto);
     row-gap: 10px;
     justify-content: space-between;
+
+    @media screen and(max-width: $beakpointIPood) {
+      justify-content: space-around;
+    }
   }
 
   &__link {
     font-size: 14px;
     line-height: 1em;
     font-family: $IBMPlexSansFontFamili;
+    padding: 5px 10px;
     color: $colorBlack;
+    transition: background-color $durarion, border-radius $durarion;
+
+    &:hover {
+      background-color: $colorDarkGray;
+      border-radius: 8px;
+    }
   }
 }
