--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "typography";
 @import "reset";
+@import "container";
 
 html {
   box-sizing: border-box;
@@ -12,3 +13,7 @@ body {
 }
 
 @import "header";
+@import "events";
+@import "gallery";
+@import "subscription";
+@import "footer";
