--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,12 @@
-.header__img {
-  height: 655px;
-  width: 1245px;
-  background-image: url("../images/header-muzej-1800x1200.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: right;
+.header {
+  margin-bottom: 200px;
+
+  &__img {
+    height: 655px;
+    width: 1245px;
+    background-image: url("../images/header-muzej-1800x1200.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
 }
