--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -15,12 +15,12 @@
     margin-bottom: 63px;
   }
 
-  &__social {
+  &__media {
     width: 63px;
     margin-right: 138px;
   }
 
-  &__social-icons {
+  &__media-icons {
     display: flex;
     justify-content: space-between;
   }
