header issue fixed

--- a/src/styles/tickets.scss
+++ b/src/styles/tickets.scss
@@ -60,7 +60,7 @@
   display: flex;
   cursor: pointer;
   padding: 0;
-  border: 1px solid ##1a5a4c;
+  border: 1px solid #1a5a4c;
   // width: 150px;
   // height: 70px;
   // font-family: $IBM-Plex-Sans-font;
