--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -27,6 +27,10 @@
     transition: transform $duration;
     transform: translateY(-100%);
     z-index: 2;
+
+    @include onTablet {
+      height: auto;
+    }
   }
 
   &__burger {
