--- a/src/styles/blocks/promo.scss
+++ b/src/styles/blocks/promo.scss
@@ -30,7 +30,11 @@
     margin-bottom: 20px;
 
     @include onTablet {
-      margin-bottom: 90px;
+      margin-bottom: 55px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 130px;
     }
   }
 
@@ -43,7 +47,7 @@
     object-fit: cover;
 
     @include onTablet {
-      width: 65%;
+      width: 57%;
       height: 100%;
       margin-bottom: 0;
       max-height: 384px;
@@ -51,6 +55,7 @@
 
     @include onDesktop {
       max-height: 655px;
+      width: 65%;
     }
   }
 
