--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -39,6 +39,7 @@
     height: 72px;
     background-color: $colorDarkGreen;
     transition: $durarion;
+    justify-items: flex-start;
 
     @media screen and(max-width: $beakpointIPood) {
       width: 100%;
