--- a/src/styles/block/form.scss
+++ b/src/styles/block/form.scss
@@ -20,18 +20,21 @@
     height: 70px;
     width: 70px;
     background-color: $colorRed;
-    color: $colorRed;
+    color: $colorBlack;
+    font-size: 1px;
     margin-left: 30px;
     background-image: url("../images/VectorBlack.png");
     background-repeat: no-repeat;
     background-position: center;
     border: none;
 
+    transform: translateY(-4px);
+
     @media screen and(max-width: $beakpointTele) {
       width: 50px;
-      height: 50px;
+      height: 49px;
       margin-left: 0;
-      transform: translateX(-10%);
+      transform: translate(-10%, -4px);
     }
   }
 
