--- a/src/styles/block/header-nav.scss
+++ b/src/styles/block/header-nav.scss
@@ -16,6 +16,7 @@
     @media screen and(max-width: $beakpointIPood) {
       flex-direction: column;
       margin-bottom: 40px;
+      align-items: left;
     }
   }
 
