Fixes after code review

--- a/src/styles/arrow-button.scss
+++ b/src/styles/arrow-button.scss
@@ -6,6 +6,7 @@
   border: 1px solid $greenColor;
   padding: 15px 43px 16px 42px;
   text-align: center;
+  transition: color 0.3s;
 
   &::after {
     display: inline-block;
@@ -16,6 +17,16 @@
     transform: translateX(43px);
     color: white;
     background-color: $greenColor;
+    transition: color 0.3s;
+  }
+
+  &:hover {
+    color: $grayColor;
+    border: 1px solid $grayColor;
+
+    &::after {
+      background-color: $grayColor;
+    }
   }
 
   @media screen and (min-width: $breakpoint1) {
