--- a/src/styles/description.scss
+++ b/src/styles/description.scss
@@ -38,6 +38,27 @@
     @include font($defaultFont, 14px, 700, 21px);
     color: $greenColor;
   }
+
+  &__title {
+    margin-bottom: 30px;
+    &::after {
+      display: inline-block;
+      position: relative;
+      content: "";
+      width: 10px;
+      height: 10px;
+      transform: translateY(-50%);
+      margin-left: 10px;
+      background-color: $redColor;
+
+      @media screen and (min-width: $breakpoint1) {
+        margin-left: 30px;
+        width: 15px;
+        height: 15px;
+        transform: translateY(-30%);
+      }
+    }
+  }
   
   &__content {
     width: 100%;
