--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -52,8 +52,11 @@ $columnWidth: 160px;
   }
 
   &__paragraph {
+    display: block;
     @include font($defaultFont, $smallSize, 
     $smallFontWeight, $smallLineHeight);
+    text-decoration: none;
+    color: black;
   }
 
   .bottom-margined {
