--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -130,6 +130,7 @@
     transform-origin: bottom left;
     text-transform: uppercase;
     color: $grayColor;
+    transition: color 0.3s;
 
     &::before {
       content: "";
