--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "header";
 
 @import "centered";
+@import "bottom-margined";
 @import "lection";
 @import "description";
 @import "event";
@@ -24,5 +25,5 @@ html {
   // set for paragraphs
   @include font($defaultFont, $defaultSize, 
   $defaultFontWeight, $defaultLineHeight);
-  
+  scroll-behavior: smooth;
 }
