--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -22,7 +22,6 @@
       gap: 30px;
       max-width: 570px;
     }
-    
 
     margin-bottom: 46px;
   }
@@ -53,14 +52,29 @@
   &__submit {
     width: 50px;
     height: 50px;
+    z-index: 1;
     @include font($defaultFont, 18px, 700);
     background-color: $redColor;
     padding: 0;
     border: none;
+    transition: box-shadow 0.3s, color 0.3s;
+    
+    &:hover {
+      color: $whiteColor;
+      box-shadow: 1px 1px 3px $whiteColor;
+    }
 
     @media screen and (min-width: $breakpoint1) {
       width: 70px;
       height: 70px;
     }
+  }
+
+  @media screen and (min-width: $breakpoint2) {
+    height: 550px;
+  }
+
+  @media screen and (min-width: $breakpoint3) {
+    height: 650px;
   }
 }
