Hover effect on events element

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -130,7 +130,7 @@
     transform-origin: bottom left;
     text-transform: uppercase;
     color: $grayColor;
-    transition: color 0.3s;
+    transition: color 0.3s, background-color 0.3s;
 
     &::before {
       content: "";
@@ -141,7 +141,15 @@
       height: 1px;
       background-color: $grayColor;
     }
+    
+    &:hover {
+      color: black;
 
+      &::before {
+        background-color: black;
+      }
+    }
+    
     @media screen and (min-width: $breakpoint1) {
       left: $leftMediumMargin;
     }
