burger menu added & first screen fixed

--- a/src/styles/tickets.scss
+++ b/src/styles/tickets.scss
@@ -1,18 +1,22 @@
 .tickets {
   height: 655px;
-  margin-bottom: 200px;
+  margin-bottom: 155px;
   background-image: url("../images/header-muzej-1800x1200.png");
   background-repeat: no-repeat;
   background-size: contain;
   position: relative;
-  left: 35%;
+  left: 675px;
+  top: -45px;
 }
 
 .tickets__events {
 
-  display: flex;
+  // display: flex;
   transform: rotate(-90deg);
-  position: relative;
+  position: absolute;
+  display: flex;
+  bottom: 60px;
+  left: -450px;
 }
 
 .tickets__events-stick {
@@ -38,7 +42,7 @@
 .tickets__wrapper {
   position: relative;
   top: 235px;
-  left: -13%;
+  left: -260px;
 }
 
 .tickets__heading {
