--- a/src/styles/block/header-nav.scss
+++ b/src/styles/block/header-nav.scss
@@ -70,7 +70,7 @@
     padding: 0 40px;
 
     @media screen and(max-width: $beakpointIPood) {
-      margin-bottom: 60px;
+      margin-top: 20px;
     }
   }
 }
