--- a/src/styles/actual-event.scss
+++ b/src/styles/actual-event.scss
@@ -136,7 +136,7 @@
     }
 
     &__info {
-      width: 280px;
+      width: $min-width-for-viewport;
     }
 
     &__name {
@@ -148,7 +148,7 @@
       }
     }
     &__subtitle {
-      width: 280px;
+      width: $min-width-for-viewport;
       display: flex;
       justify-content: space-between;
       align-items: baseline;
