--- a/src/styles/art-museum.scss
+++ b/src/styles/art-museum.scss
@@ -23,7 +23,7 @@
       content: "";
       width: 70px;
       height: 1px;
-      background-color: black;
+      background-color: $green;
       margin-right: 20px;
     }
   }
@@ -40,7 +40,7 @@
     font-family: $Montserrat-font-family;
     font-weight: 700;
     font-size: 72px;
-    line-height: 72px;
+    line-height: 100%;
     margin-bottom: 80px;
     text-transform: uppercase;
   }
@@ -49,7 +49,7 @@
     font-family: $Ubuntu-font-family;
     font-weight: 700;
     font-size: 72px;
-    line-height: 72px;
+    line-height: 100%;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1px black;
   }
@@ -78,12 +78,12 @@
     background-color: $white;
     padding-top: 27px;
     flex-basis: 66%;
-    border: 1px solid #1a5a4c;
+    border: 1px solid $green;
   }
 
   &__pointer {
     padding-top: 29px;
-    background-color: #1a5a4c;
+    background-color: $green;
     flex-basis: 34%;
   }
 
@@ -157,10 +157,10 @@
     }
 
     &__letters {
-      font-size: 45px;
-      line-height: 100%;
       font-family: $Montserrat-font-family;
       font-weight: 700;
+      font-size: 45px;
+      line-height: 100%;
       -webkit-text-fill-color: black;
       -webkit-text-stroke: 0;
     }
