--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     padding: 0 154px;
     max-width: $max-width-for-viewport-more-than-1920px;
-    width: calc(100% - 40px);
+    width: $width-for-viewport-less-than-1280px;
   }
 
   &__logo {
@@ -39,11 +39,21 @@
   &__facebook-logo {
     width: 11.2px;
     height: 24px;
+    transition: transform $duration;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__instagram-logo {
     width: 24px;
     height: 24px;
+    transition: transform $duration;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__container {
@@ -77,13 +87,17 @@
     font-size: 14px;
     line-height: 100%;
     color: #0f0e08;
+
+    &:hover {
+      text-shadow: 0 0 10px rgba(0, 133, 0, 1);
+    }
   }
 
   &__bottom {
     display: flex;
     justify-content: space-between;
     max-width: $max-width-for-viewport-more-than-1920px;
-    width: calc(100% - 40px);
+    width: $width-for-viewport-less-than-1280px;
     margin-top: 85px;
     font-weight: 300;
     font-size: 12px;
