--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -21,7 +21,7 @@
 
   &__img {
     box-shadow: 0.2em 0.2em 0.7em transparent, inset 0 0 0.7em transparent;
-    transition: transform 300ms, box-shadow 300ms, border-radius 300ms;
+    transition: transform $duration, box-shadow $duration, border-radius $duration;
   }
 
   &__img:hover {
