--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,8 +11,8 @@
     justify-content: start;
     flex-wrap: wrap;
     max-width: $max-width-for-viewport-more-than-1920px;
-    width: calc(100% - 110px);
-    min-width: calc(320px - 40px);
+    width: $width-for-viewport-more-than-1280px;
+    min-width: $min-width-for-viewport;
   }
 
   &__classicism-background {
@@ -35,16 +35,16 @@
 
   @media (max-width: 1280px) {
     &__section {
-      width: calc(100% - 40px);
+      width: $width-for-viewport-less-than-1280px;
     }
 
     &__classicism-background {
-      width: calc(100% - 40px);
+      width: $width-for-viewport-less-than-1280px;
       height: 390px;
     }
 
     &__subscription-background {
-      width: calc(100% - 40px);
+      width: $width-for-viewport-less-than-1280px;
       height: 390px;
     }
   }
