--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -46,7 +46,7 @@
     align-items: center;
     height: 402px;
     width: 100%;
-    background-color: #285a4c;
+    background-color: #629989;
 
     &__list {
       margin: auto;
