--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -40,7 +40,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 100%;
-    transition: transform 300ms;
+    transition: transform $duration;
 
     &:hover {
       transform: scale(1.05);
@@ -56,7 +56,7 @@
     cursor: pointer;
 
     &:hover {
-      transition: transform 300ms;
+      transition: transform $duration;
       transform: scale(1.05);
     }
 
