--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   height: 102px;
-  min-width: calc(320px - 40px);
+  min-width: $min-width-for-viewport;
 
   @media (max-width: 320px) {
     height: 91px;
