index.html and gallery.scss were corrected

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -21,7 +21,9 @@
 
   &__img {
     box-shadow: 0.2em 0.2em 0.7em transparent, inset 0 0 0.7em transparent;
-    transition: transform $duration, box-shadow $duration, border-radius $duration;
+    transition: transform $duration,
+      box-shadow $duration,
+      border-radius $duration;
   }
 
   &__img:hover {
