--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -25,6 +25,11 @@
     width: 63px;
     height: 72px;
     background: url("../images/Logo.png") no-repeat center;
+    transition: transform $duration;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__media {
