header and evens blocks are completed with adaptive

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,38 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "container";
+@import "./blocks/header.scss";
+@import "./blocks/event.scss";
+
+// screen 1920 -> content 1570
+// screen 1440 -> content 1170
+// screen 1280 -> content 1170
+// screen 768 -> content 700
+// screen 320 -> content 280
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  max-width: 1920px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
+.page-header {
+  margin-bottom: 780px;
+
+  @media (max-width: 1080px) {
+    margin-bottom: 500px;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 600px;
+  }
+}
+
+.main__event {
+  margin-bottom: 100px;
 }
