--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,47 @@
     #{$_property}: $_toValue;
   }
 }
+
+// screen 1920 -> content 1570
+// screen 1440 -> content 1170
+// screen 1280 -> content 1170
+// screen 768 -> content 700
+// screen 320 -> content 280
+
+@mixin desktop_1920 {
+  @media (max-width: 1570px) {
+    @content;
+  }
+}
+
+@mixin desktop_1440 {
+  @media (max-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin desktop_1280 {
+  @media (max-width: 1080px) {
+    @content;
+  }
+}
+
+@mixin tablet_768 {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobile_320 {
+  @media (max-width: 320px) {
+    @content;
+  }
+}
+
+@mixin titles($_fontSize, $_fontWeight, $_lineHeight) {
+  font-family: $fontMontserat;
+  font-size: $_fontSize;
+  font-weight: $_fontWeight;
+  line-height: $_lineHeight;
+  color: $colorTitles;
+}
