--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$fontMontserat: "Montserrat", sans-serif;
+$fontIBMPlexSans: "IBM Plex Sans", sans-serif;
+
+$H1fontSize: 72px;
+
+$colorTitles: #0f0e08;
+$colorTexts: #4e4e4e;
+$colorEvents: #687480;
+$colorElemens: #1a5a4c;
+$colorDecor: #f14a27;
